1 Nov 2011: Wouter
	- probe ssl servers (nlnetlabs default server configured).

31 Oct 2011: Wouter
	- do not log errors for unclean ssl close.

28 Oct 2011: Wouter
	- documentation fixes
	- osx dmg install fix for 10.6 packager (start of userspace panel).
	  also framework for debug logging in postflight of packager.
	  10.6 packages work on 10.7.  10.7 packages work on 10.7.
	- tag 0.7
	- trunk is 0.8 under development.
	- macinstall, launch unbound-anchor at boot (update if offline months)
	- echo in Makefile and newline if no probe performed.

27 Oct 2011: Wouter
	- osx dmg install and uninstall works.
	- for caches, also test if NSEC3 is present for QTYPE=NULL nodata.

26 Oct 2011: Wouter
	- uninstall command for OSX (put in the DMG).

25 Oct 2011: Wouter
	- fix echo at end of make install.
	- osx makepackage, donated by Carsten Strotmann.

22 Oct 2011: Wouter
	- fix unknown options for dnssec-trigger-panel, prints version too.

21 Oct 2011: Wouter
	- Add @ to echo in Makefile.
	- print error on control unknown command, and exit status 1.
	- tag 0.6
	- trunk is 0.7 under development.
	- fix that setup hint is not printed on a reinstall.
	- stop executables before re-install of dnssec-trigger.
	- tested to work on winXP (thanks Jan-Piet Mens).
	- fix printout of 1970 date, instead that no probe was performed.

18 Oct 2011: Wouter
	- Manpage fixes
	- can build outside of sourcedir.
	- libappindicator support, for Ubuntu Unity desktop GUI.

17 Oct 2011: Wouter
	- Fix insecure mode after dnstcp443 has been probed.
	- Fix OS-race on Linux/BSD, it sets immutable settings on install, and
	  checks this regularly (and fixes if necessary).

13 Oct 2011: Wouter
	- the dnssec-trigger-panel (gtk2) works on the XFCE desktop.
	- windows package works, tested Vista.
	- osx fix for insecure mode.

12 Oct 2011: Wouter
	- makes resolv.conf immutable and restores on uninstall.

10 Oct 2011: Wouter
	- detect transparent proxies and avoid them.

29 Sep 2011: Wouter