@@ -1,3 +1,6 @@
+2 Nov 2011: Wouter
+	- check ssl fingerprint of servers.
+
 1 Nov 2011: Wouter
 	- probe ssl servers (nlnetlabs default server configured).
 
